[gd_scene load_steps=7 format=2]

[ext_resource path="res://godot_fontpack/Godot-Fontpack-master/fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://godot_fontpack/Godot-Fontpack-master/fonts/droid-sans/DroidSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://result_list.gd" type="Script" id=4]
[ext_resource path="res://maps/practice_001.tres" type="Resource" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[node name="ResultList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
map = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 60.0
margin_bottom = 600.0
custom_constants/margin_right = 60

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 64.0
margin_right = 960.0
margin_bottom = 600.0
size_flags_horizontal = 11
size_flags_vertical = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 896.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 369.0
margin_right = 527.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Result List"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 896.0
margin_bottom = 542.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="ResultListContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ScrollContainer"]
margin_right = 896.0
size_flags_horizontal = 11
size_flags_vertical = 9

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 546.0
margin_right = 896.0
margin_bottom = 600.0

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 395.0
margin_right = 500.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "Back"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 964.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 60

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
